--- a/Tablas.xaml
+++ b/Tablas.xaml
@@ -20,7 +20,7 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
 
-        <DatePicker Name="dp" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Left" Margin="10,10,0,10" SelectedDateChanged="dp_SelectedDateChanged"/>
+        <DatePicker Name="dp" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Left" Margin="10,10,0,10"/>
 
         <Button Content="Crear tabla" Grid.Column="1" HorizontalAlignment="Right" Click="CrearTabla_Click" RenderTransformOrigin="0.045,0.591" Margin="0,10,10,10"/>
 
@@ -32,10 +32,17 @@
                     <GridViewColumn Header="TOTAL CALORÍAS" DisplayMemberBinding="{Binding totalCalorias}"></GridViewColumn>
                 </GridView>
             </ListView.View>
+            
+            <ListView.ContextMenu>
+                <ContextMenu>
+                    <MenuItem Header="Eliminar" Click="EliminarFecha_Click"/>
+                </ContextMenu>
+            </ListView.ContextMenu>
+            
         </ListView>
 
         <TextBox Name="COMIDA" Grid.Row="2" Grid.Column="0" Margin="10,0,10,10"></TextBox>
-        <TextBox Name="CALORIAS" Grid.Row="2" Grid.Column="1" TextChanged="CALORIAS_TextChanged" Margin="0,0,98,10"></TextBox>
+        <TextBox Name="CALORIAS" Grid.Row="2" Grid.Column="1" Margin="0,0,98,10"></TextBox>
         <Button Content="Añadir Comida" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Right" Click="AnadirComida_Click" RenderTransformOrigin="0.045,0.591" Margin="0,10,10,10"/>
 
 
@@ -47,6 +54,13 @@
                     <GridViewColumn Header="CALORÍAS" DisplayMemberBinding="{Binding calorias}"></GridViewColumn>
                 </GridView>
             </ListView.View>
+
+            <ListView.ContextMenu>
+                <ContextMenu>
+                    <MenuItem Header="Eliminar" Click="EliminarComida_Click"/>
+                </ContextMenu>
+            </ListView.ContextMenu>
+            
         </ListView>
 
 
