--- a/Tablas.xaml
+++ b/Tablas.xaml
@@ -25,7 +25,7 @@
         <Button Content="Crear tabla" Grid.Column="1" HorizontalAlignment="Right" Click="CrearTabla_Click" RenderTransformOrigin="0.045,0.591" Margin="0,10,10,10"/>
 
         <ListView Name="listaFecha" Grid.Row="1" Grid.ColumnSpan="2" SelectionChanged="listaFecha_SelectionChanged"
-                  ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.CanContentScroll="False" Margin="10,10,10,20">
+                  ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.CanContentScroll="True" Margin="10,10,10,20">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="FECHA" DisplayMemberBinding="{Binding fecha}"></GridViewColumn>
@@ -46,7 +46,7 @@
         <Button Content="Añadir Comida" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Right" Click="AnadirComida_Click" RenderTransformOrigin="0.045,0.591" Margin="0,10,10,10"/>
 
 
-        <ListView Name="listaDia" Grid.Row="3" Grid.ColumnSpan="2" SelectionChanged="listaDia_SelectionChanged"
+        <ListView Name="listaDia" Grid.Row="3" Grid.ColumnSpan="2"
                   ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.CanContentScroll="True" Margin="10">
             <ListView.View>
                 <GridView>
