Gráficas de días a medias con varios colores

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -37,11 +37,13 @@
             </MenuItem>
         </Menu>
 
-        <Button Content="Ver Todo" Grid.Row="1" Margin="74.944,2,100,2" Click="VerTodo_Click" Grid.ColumnSpan="2" Grid.Column="1"/>
+        <Button Content="Ver Gráfica Global" Grid.Row="1" Margin="268,2,372,2" Click="VerTodo_Click" Grid.Column="1" Grid.ColumnSpan="2"/>
+        <Button Name="BotonIzq" Content="Izq" Grid.Row="1" Margin="27,2,328,2" Click="BotonIzq_Click" Grid.Column="2"/>
+        <Button Name="BotonDch" Content="Dch" Margin="72,2,284,2" Click="BotonDch_Click" Grid.Column="2" Grid.Row="1"/>
 
         <Viewbox x:Name="ViewBox" Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="3" Margin="0,0,0,-19" IsHitTestVisible="False" >
             <Grid>
-                <Canvas x:Name="CanvasComida" Visibility="Hidden" Background="Beige" VerticalAlignment="Center" HorizontalAlignment="Center" Height="17" Width="37">
+                <Canvas x:Name="CanvasComida" Visibility="Visible" Background="Beige" VerticalAlignment="Center" HorizontalAlignment="Center" Height="17" Width="37">
                     <Line x:Name="line1" Visibility="Visible" Stroke="Red" StrokeThickness="5" Fill="Blue" X1="9" X2="30" Canvas.Top="13" Canvas.Left="-6" Width="23">
                         <Line.RenderTransform>
                             <TransformGroup>
